got rid of code file, changed ol on highscores.html and score.js to highscoresOl, made other changes to the code to finish up the last bit of the challenge.

--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1>Highscores</h1>
-      <ol id="highscores"></ol>
+      <ol id="highscoresOl"></ol>
 
       <a href="./index.html"><button>Return to Quiz</button></a>
       <button id="clear">Clear Highscores</button>
