moved files into Assets folder

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Code Quiz</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./Assets/style.css" />
 
 </head>
 
 <body>
   <div class="highscores">
-    <a href="./highscores.html">View Highscores</a>
+    <a href="./Assets/highscores.html">View Highscores</a>
   </div>
 
   <div class="Initials" id="Initials"></div>
@@ -62,7 +62,7 @@
 
   </div>
 
-  <script src="./script.js"></script>
+  <script src="./Assets/script.js"></script>
 </body>
 
 </html>
